--- a/public/back/index.html
+++ b/public/back/index.html
@@ -57,8 +57,8 @@
 	<div class="container-fluid">
 		<!-- 导航路径 -->
 		<ol class="breadcrumb">
-			<li><a href="#">Home</a></li>
-			<li><a href="#">Library</a></li>
+			<li><a href="#">管理系统</a></li>
+			<li><a href="#">首页</a></li>
 			<li class="active">Data</li>
 		</ol>
 
@@ -84,11 +84,12 @@
 			</div>
 			<div class="modal-footer">
 			  <button type="button" class="btn btn-default" data-dismiss="modal">取消</button>
-			  <button type="button" class="btn btn-primary">确定</button>
+			  <button type="button" class="btn btn-primary logout">确定</button>
 			</div>
 		  </div><!-- /.modal-content -->
 		</div><!-- /.modal-dialog -->
 	  </div><!-- /.modal -->
+
 
 
 
