--- a/public/back/index.html
+++ b/public/back/index.html
@@ -21,7 +21,7 @@
 	<div class="nav">
 		<ul>
 			<li>
-				<a href="user.html" class="now">
+				<a href="user.html">
 					<span class="glyphicon glyphicon-user"></span>
 					用户管理
 				</a>
@@ -57,13 +57,15 @@
 	<div class="container-fluid">
 		<!-- 导航路径 -->
 		<ol class="breadcrumb">
-			<li><a href="#">管理系统</a></li>
-			<li><a href="#">首页</a></li>
-			<li class="active">Data</li>
+			<li><a href="index.html">管理系统</a></li>
+			<li class="active">首页</li>
 		</ol>
 
 		<!-- 替换部分的盒子 -->
-		<div style="width:100%;height:400px;border:1px solid red;"></div>
+		<div>
+			<div class="echarts_1 pull-left"></div>
+			<div class="echarts_2 pull-right"></div>
+		</div>
 
 	</div>
 </div>
@@ -97,7 +99,8 @@
 <script src="lib/bootstrap/js/bootstrap.min.js"></script>
 <script src="lib/bootstrap-validator/js/bootstrapValidator.min.js"></script>
 <script src="lib/nprogress/nprogress.js"></script>
+<script src="lib/echarts/echarts.min.js"></script>
 <script src="js/commen.js"></script>
-<script src="js/login.js"></script>
+<script src="js/index.js"></script>
 </body>
 </html>
